Fix issue #56 by not collapsing whitespace.

--- a/src/content/default.css
+++ b/src/content/default.css
@@ -20,6 +20,7 @@ body {
 
 .string {
   color: green;
+  white-space: pre-wrap;
 }
 
 .collapser {
